@@ -11,18 +11,18 @@
  * @versao 1.0 - 28/11/2017
  * @metodos Index()
  */
-class HomeController extends PrincipalController {
+class HomeController /*extends PrincipalController*/ {
 
     /**
-     * Carrega a página "/views/home/home.php"
+     * Carrega a página "/views/Home.php"
      */
     public function index() {
         
         // Título da página
         //$this->title = 'Home';
+        
         // Parametros da função
         //$parametros = ( func_num_args() >= 1 ) ? func_get_arg(0) : array();
-        // Essa página não precisa de modelo (model)
 
         /** Carrega os arquivos do view * */
         require_once HOME;
