@@ -1,5 +1,6 @@
 <!-- Carregando o arquivo de configurações globais -->
 <?php 
 require_once 'config.php';
+
 ?>
 
